[package]
name = "pomd"
version = "1.5.1"
description = "A simple configurable pomodoro D-Bus daemon"
license = "0BSD OR MIT OR Apache-2.0"
edition = "2021"
keywords = ["productivity", "pomodoro", "daemon"]
repository = "https://git.exvacuum.dev/pomd"

[dependencies]
notify-rust = "4.11"
zbus = "5.1"
async-std = { version = "1.12", features = ["attributes"] }
pausable_clock = "1.0"
confy = "0.6"
serde = "1.0"
